[package]
name = "recon-ui"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "1.1.0"
tracing = "0.1.44"
headfile = {git = "ssh://git@github.com/wyatt-A/headfile.git"}
object-manager = {git = "ssh://git@github.com/wyatt-A/object-manager.git"}
walkdir = "2.5.0"
whoami = "2.1.1"
dirs = "6.0.0"
chrono = "0.4.44"
